fix segnalazioni jugday

--- a/jday/index.html
+++ b/jday/index.html
@@ -7,7 +7,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>JDay 2016- A Day In Java</title>
+	<title>JUG Day TAAS 2016- A Day In Java&#8482;</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -47,7 +47,7 @@
 
 			<div id="logo" >
 				<a href="#" >
-                 <img src="images/logo.png" alt="Zoon">
+                 <img src="images/logo.png" alt="JUG Day TAAS">
               </a>
 			</div>
 
@@ -71,10 +71,11 @@
    	<div  id="main" class="row">
 
 	   	<div class="twelve columns">
+        <h1>14 maggio 2016</h1>
 
-	   		<h1>Un giorno per incontrare la comunità  di Java in Trentino!</h1>
+	   		<h1>Un giorno per incontrare la comunità  di Java&#8482; in Trentino!</h1>
 
-	   		<p>Vola al JDay ed incontra le persone che quotidianamente usano Java in contesti professionali.</p>
+	   		<p>Vola al Java&#8482; User Group Day del Trentino Alto Adige S&#xFC;dtirol ed incontra le persone che quotidianamente usano Java&#8482; in contesti professionali.</p>
 
 	   		<h5>Tempo alla scadenza</h5>
 
@@ -87,13 +88,13 @@
 
    			<!-- Begin Signup -->
         <div class="action">
-            <a href="https://www.eventbrite.com/e/jday-2016-quicks-tickets-23939041317" class="button">Registrazione alle presentazioni <br>20 posti</a>
-            <a href="#quicks"> <h5>informazioni</h5></a>
+            <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT" class="button">Registrazione alle presentazioni <br>20 posti</a>
+            <a href="#quicks"> <img src="images/giu.png" alt="informazioni"></a>
          </div>
          <div class="action">
-             <a href="https://www.eventbrite.com/e/jday-2016-sprint-contest-tickets-24118015634" class="button">Registrazione al contest <br>20 posti
+             <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT" class="button">Registrazione al contest <br>10 posti
              </a>
-             <a href="#sprint"> <h5>informazioni</h5></a>
+             <a href="#sprint">  <img src="images/giu.png" alt="informazioni"></a>
           </div>
 
         </div>
@@ -118,8 +119,8 @@
 
 	         <h1>About.</h1>
 
-	         <p class="lead">Una giornata per approfondire con professionisti Java,
-             il panorama di prodotti, strumenti, e metodologie in uso oggi nelle realtà aziendali.<br>
+	         <p class="lead">Una giornata per approfondire con professionisti Java&#8482;,
+             il panorama di prodotti, strumenti e metodologie in uso oggi nelle realtà aziendali.<br>
              Una giornata per mettersi alla prova, creare contatti e divertirsi.
 	         </p>
 
@@ -132,8 +133,8 @@
 			<div class="six columns">
 		      <h3>Mattina</h3>
 
-		      <p>La mattina sarà riservata alle rapide presentazioni di vari temi Java.
-            Presentano professionisti Java facenti parte del Java User Group Trentino Alto Adige Suedtirol.
+		      <p>La mattina sarà dedicata a vari temi di carattere professionale che riguardano il mondo Java. Esperti Java parleranno delle proprie esperienze professionali in azienda.
+La mattina sarà riservata alle rapide presentazioni di vari temi Java&#8482;.
             <a href="#quicks">quicks</a>
 		      </p>
 	      </div>
@@ -156,17 +157,17 @@
 		   <div class="row section-ads">
 
 		      <div class="twelve columns">
-            <p>I  posti sono limitati a 20 per massima capienza della sala.
+            <p>I  posti sono limitati dalla massima capienza della sala.
               I primi venti registrati saranno avvisati via email.
               In caso di defezioni si procederà a seguire per ordine di iscrizione.</p>
 			      <h2>Vieni ad incontrarci</h2>
 
             <div class="action">
-  			         <a href="https://www.eventbrite.com/e/jday-2016-quicks-tickets-23939041317" class="button">Registrazione alla mattina</a>
+  			         <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT" class="button">Registrazione alla mattina</a>
   	         	</div>
               <br>
             <div class="action">
-  			         <a href="https://www.eventbrite.com/e/jday-2016-sprint-contest-tickets-24118015634" class="button">Registrazione al pomeriggio</a>
+  			         <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT" class="button">Registrazione al pomeriggio</a>
   	         	</div>
 
 			   </div>
@@ -191,7 +192,7 @@
 
 	         <h1>Quicks.</h1>
 
-	         <p class="lead">Una mattina di presentazioni brevi da 20 minuti su un tema specifico di Java
+	         <p class="lead">Una mattina di presentazioni brevi da 20 minuti ciascuna su un tema specifico di Java&#8482;
            che può riguardare prodotti, una metodologia, e strumenti per lo sviluppo.
 	         </p>
 
@@ -205,14 +206,14 @@
 		      <h3>Simone Bordet</h3>
 
 		      <p> Direttamente da uno dei suoi core developers.
-            Jetty servlet engine planetaria con i più moderni protocolli web scritta in Java.
+            Jetty servlet engine planetaria con i più moderni protocolli web scritta in Java&#8482;.
 		      </p>
 	      </div>
 
 	      <div class="six columns">
-		      <h3>Alex Mario Santini</h3>
+		      <h3>Alessandro Mario Santini</h3>
 
-		      <p>Quante volte una semplice richiesta si risolve con uno semplice script per poi trasfomrarsi in tutt'altro.</p>
+		      <p>Quante volte una semplice richiesta si risolve con un semplice script per poi trasfomrarsi in tutt'altro.</p>
 	      </div>
 
       </div> <!-- end section-content -->
@@ -222,7 +223,7 @@
 			<div class="six columns">
 		      <h3>Davide Montesin</h3>
 
-		      <p>Esperienza di programmazione Java e non solo per risolvere problemi
+		      <p>Esperienza di programmazione Java&#8482; e non solo per risolvere problemi
             di presentazione.
 		      </p>
 	      </div>
@@ -259,11 +260,10 @@
 		   <div class="row section-ads">
 
 		      <div class="twelve columns">
-            <p>I  posti sono limitati a 20 per massima capienza della sala.
-              I primi venti registrati saranno avvisati via email.
+            <p>I posti sono limitati dalla capienza della sala. I primi 20 registrati saranno avvisati via email.
               In caso di defezioni si procederà a seguire per ordine di iscrizione.</p>
 					<div class="action">
-			         <a href="https://www.eventbrite.com/e/jday-2016-quicks-tickets-23939041317" class="button">Registrazione alle presentazioni</a>
+			         <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT" class="button">Registrazione alle presentazioni</a>
 	         	</div>
 
 			   </div>
@@ -289,8 +289,8 @@
 	         <h1>Sprint.</h1>
 
 	         <p class="lead">Un pomeriggio di attività mirate al conseguimento di uno specifico obiettivo.
-           Spazio alla scrittura di codice compatto,  di qualità. Codice pulito, soluzioni eleganti.
-	         </p>
+             Spazio alla scrittura di codice di qualità. Codice pulito, compatto ed elegante.
+           </p>
 
          </div>
 
@@ -304,8 +304,8 @@
           <p>Regole minime:
 		      </p>
           <ul>
-            <li>Portattile</li>
-            <li>Java Dev Kit</li>
+            <li>Portatile</li>
+            <li>Java&#8482; Dev Kit</li>
             <li>IDE</li>
           </ul>
 	      </div>
@@ -316,11 +316,11 @@
 		      <p>Ne fanno parte:
 		      </p>
           <ul>
-            <li>Alex Mario Santini, JUGTaas</li>
-            <li>Boris Sclauzero, XPeppers</li>
-            <li>,Belka</li>
-            <li>Nicola Grigoletti, ThreadSolutions</li>
-            <li>Nicola Pedot, JUGTaas</li>
+            <li>Alessandro Mario Santini, <br>JUGTAAS</li>
+            <li>Boris Sclauzero, <br>XPeppers</li>
+            <li>Giovanni Frigo, <br>Belka</li>
+            <li>Nicola Grigoletti, <br>ThreadSolutions </li>
+            <li>Nicola Pedot, <br>JUGTAAS</li>
           </ul>
 	      </div>
 
@@ -334,9 +334,9 @@
 		      <p>Aziende che ricercano personale:
 		      </p>
           <ul>
-            <li>ThreadSolutions</li>
-            <li>XPeppers</li>
-            <li>Belka</li>
+            <li>ThreadSolutions, <br><a href="http://thread.solutions/">http://thread.solutions/</a></li>
+            <li>XPeppers,  <br><a href="http://www.xpeppers.com/">http://www.xpeppers.com/</a></li>
+            <li>Belka,  <br><a href="http://www.belka.us/">http://www.belka.us/</a></li>
           </ul>
 	      </div>
 
@@ -344,7 +344,7 @@
 		      <h3>Vincite.</h3>
 
 		      <p>Per tutti i partecipanti una maglietta dell'evento.<br>
-            Per i primi tre classificati un'attestato di miglior coder 2016.
+            Per i primi tre classificati un'attestato di miglior <b>JUG Day Coder 2016</b>.
 		      </p>
 	      </div>
 
@@ -355,13 +355,14 @@
 		   <div class="row section-ads">
 
 		      <div class="twelve columns">
-            <p>I  posti sono limitati a 20 per massima capienza della sala.
-              I primi venti registrati saranno avvisati via email.
-              In caso di defezioni si procederà a seguire per ordine di iscrizione.</p>
+            <p>I posti sono limitati dall capienza della sala.
+              I primi 10 registrati saranno avvisati via email.
+              In caso di defezioni si procederà a seguire per ordine di iscrizione.
+            </p>
 
 
 					<div class="action">
-			         <a href="https://www.eventbrite.com/e/jday-2016-sprint-contest-tickets-24118015634" class="button">Registrazione al contest</a>
+			         <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT" class="button">Registrazione al contest</a>
 	         	</div>
 
 			   </div>
@@ -431,8 +432,9 @@
          <div class="twelve columns">
 
             <ul class="copyright">
-              <li>Organized by <a title="Styleshout" href="http://www.jugtaas.org/">Java User Group Trentino Alto Adige Suedtirol</a></li>
-              <li>Design by <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a></li>
+              <li>Organizzato da <a title="Styleshout" href="http://www.jugtaas.org/">Java&#8482; User Group Trentino Alto Adige S&#xFC;dtirol</a></li>
+              <li>Progetto grafico iniziale di <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a></li>
+              <br>Java è un marchio registrato di Oracle Corporation.
             </ul>
 
          </div>
