--- a/jday/index.html
+++ b/jday/index.html
@@ -211,7 +211,7 @@ La mattina sarà riservata alle rapide presentazioni di vari temi Java&#8482;.
 	      </div>
 
 	      <div class="six columns">
-		      <h3>Alessandro Mario Santini</h3>
+		      <h3>Mario Alexandro Santini</h3>
 
 		      <p>Quante volte una semplice richiesta si risolve con un semplice script per poi trasfomrarsi in tutt'altro.</p>
 	      </div>
@@ -316,7 +316,7 @@ La mattina sarà riservata alle rapide presentazioni di vari temi Java&#8482;.
 		      <p>Ne fanno parte:
 		      </p>
           <ul>
-            <li>Alessandro Mario Santini, <br>JUGTAAS</li>
+            <li>Mario Alexandro Santini, <br>JUGTAAS</li>
             <li>Boris Sclauzero, <br>XPeppers</li>
             <li>Giovanni Frigo, <br>Belka</li>
             <li>Nicola Grigoletti, <br>ThreadSolutions </li>
