added Davide in giuria

--- a/jday/index.html
+++ b/jday/index.html
@@ -318,6 +318,7 @@ La mattina sarà riservata alle rapide presentazioni di vari temi Java&#8482;.
           <ul>
             <li>Mario Alexandro Santini, <br>JUGTAAS</li>
             <li>Boris Sclauzero, <br>XPeppers</li>
+            <li>Davide Montesin, <br>JUGTAAS</li>
             <li>Giovanni Frigo, <br>Belka</li>
             <li>Nicola Grigoletti, <br>ThreadSolutions </li>
             <li>Nicola Pedot, <br>JUGTAAS</li>
