fix for evntbrite links

--- a/jday/index.html
+++ b/jday/index.html
@@ -88,11 +88,11 @@
 
    			<!-- Begin Signup -->
         <div class="action">
-            <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT" class="button">Registrazione alle presentazioni <br>20 posti</a>
+            <a href="https://www.eventbrite.com/e/jday-2016-quicks-tickets-23939041317" class="button">Registrazione alle presentazioni <br>20 posti</a>
             <a href="#quicks"> <img src="images/giu.png" alt="informazioni"></a>
          </div>
          <div class="action">
-             <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT" class="button">Registrazione al contest <br>10 posti
+             <a href="https://www.eventbrite.com/e/jday-2016-sprint-contest-tickets-24118015634" class="button">Registrazione al contest <br>10 posti
              </a>
              <a href="#sprint">  <img src="images/giu.png" alt="informazioni"></a>
           </div>
@@ -163,11 +163,11 @@ La mattina sarà riservata alle rapide presentazioni di vari temi Java&#8482;.
 			      <h2>Vieni ad incontrarci</h2>
 
             <div class="action">
-  			         <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT" class="button">Registrazione alla mattina</a>
+  			         <a href="https://www.eventbrite.com/e/jday-2016-quicks-tickets-23939041317" class="button">Registrazione alla mattina</a>
   	         	</div>
               <br>
             <div class="action">
-  			         <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT" class="button">Registrazione al pomeriggio</a>
+  			         <a href="https://www.eventbrite.com/e/jday-2016-sprint-contest-tickets-24118015634" class="button">Registrazione al pomeriggio</a>
   	         	</div>
 
 			   </div>
@@ -263,7 +263,7 @@ La mattina sarà riservata alle rapide presentazioni di vari temi Java&#8482;.
             <p>I posti sono limitati dalla capienza della sala. I primi 20 registrati saranno avvisati via email.
               In caso di defezioni si procederà a seguire per ordine di iscrizione.</p>
 					<div class="action">
-			         <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT" class="button">Registrazione alle presentazioni</a>
+			         <a href="https://www.eventbrite.com/e/jday-2016-quicks-tickets-23939041317" class="button">Registrazione alle presentazioni</a>
 	         	</div>
 
 			   </div>
@@ -363,7 +363,7 @@ La mattina sarà riservata alle rapide presentazioni di vari temi Java&#8482;.
 
 
 					<div class="action">
-			         <a href="http://www.dreamhost.com/r.cgi?287326|STYLESHOUT" class="button">Registrazione al contest</a>
+			         <a href="https://www.eventbrite.com/e/jday-2016-sprint-contest-tickets-24118015634" class="button">Registrazione al contest</a>
 	         	</div>
 
 			   </div>
@@ -387,7 +387,7 @@ La mattina sarà riservata alle rapide presentazioni di vari temi Java&#8482;.
 			   <div class="columns">
 
 				   <h3><i class="fa fa-home"></i>Indirizzo.</h3>
-				   <p>ImpactHub<br>
+				   <p><a href="http://rovereto.impacthub.net/">ImpactHub Trentino S&#xFC;dtirol </a><br>
 						Quartiere Albere <br>
 						Trento, Italia
 					</p>
@@ -433,7 +433,7 @@ La mattina sarà riservata alle rapide presentazioni di vari temi Java&#8482;.
          <div class="twelve columns">
 
             <ul class="copyright">
-              <li>Organizzato da <a title="Styleshout" href="http://www.jugtaas.org/">Java&#8482; User Group Trentino Alto Adige S&#xFC;dtirol</a></li>
+              <li>Organizzato da <a title="JUGTAAS" href="http://www.jugtaas.org/">Java&#8482; User Group Trentino Alto Adige S&#xFC;dtirol</a></li>
               <li>Progetto grafico iniziale di <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a></li>
               <br>Java è un marchio registrato di Oracle Corporation.
             </ul>
