fix presentaz Tiziano

--- a/jday/index.html
+++ b/jday/index.html
@@ -249,7 +249,7 @@ La mattina sarà riservata alle rapide presentazioni di vari temi Java&#8482;.
 	      <div class="six columns">
 		      <h3>Tiziano Lattisi</h3>
 
-		      <p>Imprenditore, Freelance, Startupper. <br>Percorsi lavorativi in Italia.
+		      <p>Informatica e libera professione dagli anni novanta ad oggi: da opportunità a necessità.
 		      </p>
 	      </div>
 
