fixed subject Davide

--- a/jday/index.html
+++ b/jday/index.html
@@ -223,8 +223,7 @@ La mattina sarà riservata alle rapide presentazioni di vari temi Java&#8482;.
 			<div class="six columns">
 		      <h3>Davide Montesin</h3>
 
-		      <p>Esperienza di programmazione Java&#8482; e non solo per risolvere problemi
-            di presentazione.
+		      <p>Panoramica sulle API Android per i sensori: GPS, accelerometro, gravità, ecc...
 		      </p>
 	      </div>
 
