--- a/jday/index.html
+++ b/jday/index.html
@@ -245,10 +245,18 @@ La mattina sarà riservata alle rapide presentazioni di vari temi Java&#8482;.
 		      </p>
 	      </div>
 
-	      <div class="six columns">
+        <div class="six columns">
 		      <h3>Tiziano Lattisi</h3>
 
 		      <p>Informatica e libera professione dagli anni novanta ad oggi: da opportunità a necessità.
+		      </p>
+	      </div>
+
+        <div class="six columns">
+		      <h3>Andrea Bertagnolli</h3>
+
+		      <p>Unit test in java, ovvero: <br>come sopravvivere nella giungla del codice
+
 		      </p>
 	      </div>
 
@@ -334,6 +342,7 @@ La mattina sarà riservata alle rapide presentazioni di vari temi Java&#8482;.
 		      <p>Aziende che ricercano personale:
 		      </p>
           <ul>
+            <li>Paros, <br><a href="http://www.paros.srl/">http://www.paros.srl/</a></li>
             <li>ThreadSolutions, <br><a href="http://thread.solutions/">http://thread.solutions/</a></li>
             <li>XPeppers,  <br><a href="http://www.xpeppers.com/">http://www.xpeppers.com/</a></li>
             <li>Belka,  <br><a href="http://www.belka.us/">http://www.belka.us/</a></li>
