cambio di location

--- a/jday/index.html
+++ b/jday/index.html
@@ -386,9 +386,9 @@ La mattina sarà riservata alle rapide presentazioni di vari temi Java&#8482;.
 			   <div class="columns">
 
 				   <h3><i class="fa fa-home"></i>Indirizzo.</h3>
-				   <p><a href="http://rovereto.impacthub.net/">ImpactHub Trentino S&#xFC;dtirol </a><br>
-						Quartiere Albere <br>
-						Trento, Italia
+				   <p><a href="http://rovereto.impacthub.net/">HIT - Hub Innovazione Trentino</a><br>
+						Via San Croce, 67 <br>
+						38122, Trento , Italy
 					</p>
 
 			   </div>
