jday fix link HIT

--- a/jday/index.html
+++ b/jday/index.html
@@ -395,7 +395,7 @@ La mattina sarà riservata alle rapide presentazioni di vari temi Java&#8482;.
 			   <div class="columns">
 
 				   <h3><i class="fa fa-home"></i>Indirizzo.</h3>
-				   <p><a href="http://rovereto.impacthub.net/">HIT - Hub Innovazione Trentino</a><br>
+				   <p><a href="http://www.trentinoinnovation.eu/">HIT - Hub Innovazione Trentino</a><br>
 						Via San Croce, 67 <br>
 						38122, Trento , Italy
 					</p>
