--- a/jday/index.html
+++ b/jday/index.html
@@ -353,7 +353,7 @@ La mattina sarà riservata alle rapide presentazioni di vari temi Java&#8482;.
 		      <h3>Vincite.</h3>
 
 		      <p>Per tutti i partecipanti una maglietta dell'evento.<br>
-            Per i primi tre classificati un'attestato di miglior <b>JUG Day Coder 2016</b>.
+            Per i primi tre classificati un'attestato di miglior <b>JUG Day Coder 2016</b> e libri premio.
 		      </p>
 	      </div>
 
@@ -403,13 +403,8 @@ La mattina sarà riservata alle rapide presentazioni di vari temi Java&#8482;.
 			   </div>
 
 			   <div class="columns">
-           <!--
-				   <h3><i class="fa fa-phone"></i>Phone Numbers.</h3>
-				   <p>Phone: (000) 777 1515<br>
-				   	Mobile: (000) 777 0100<br>
-				   	Fax: (000) 777 0101
-				   </p>
-         -->
+				   <h3>Locandina</h3>
+				   <a href="Locandina.pdf"><img src="images/locandina.gif" /></a>
 			   </div>
 
 			   <div class="columns end">
