aggiunti loghi sponsors

--- a/jday/index.html
+++ b/jday/index.html
@@ -396,6 +396,7 @@ La mattina sarà riservata alle rapide presentazioni di vari temi Java&#8482;.
 
 				   <h3><i class="fa fa-home"></i>Indirizzo.</h3>
 				   <p><a href="http://www.trentinoinnovation.eu/">HIT - Hub Innovazione Trentino</a><br>
+            Contamination Lab Trento<br>
 						Via San Croce, 67 <br>
 						38122, Trento , Italy
 					</p>
@@ -434,7 +435,12 @@ La mattina sarà riservata alle rapide presentazioni di vari temi Java&#8482;.
       <div class="row">
 
          <div class="twelve columns">
-
+            <h1>Sponsors</h1>
+            <div class="columns"><a href="http://www.belka.us/"><img src="images/sponsors/logo_belka.png"></a></div>
+            <div class="columns"><a href="http://www.paros.srl/"><img src="images/sponsors/logo_paros.png"></a></div>
+            <div class="columns"><a href="http://thread.solutions/"><img src="images/sponsors/logo_threadsolutions.png"></a></div>
+            <div class="columns"><a href="http://www.xpeppers.com/"><img src="images/sponsors/logo_xpeppers.png"></a></div>
+            <hr>
             <ul class="copyright">
               <li>Organizzato da <a title="JUGTAAS" href="http://www.jugtaas.org/">Java&#8482; User Group Trentino Alto Adige S&#xFC;dtirol</a></li>
               <li>Progetto grafico iniziale di <a title="Styleshout" href="http://www.styleshout.com/">Styleshout</a></li>
