--- a/jday/index.html
+++ b/jday/index.html
@@ -393,14 +393,13 @@ La mattina sarà riservata alle rapide presentazioni di vari temi Java&#8482;.
 			<div class="row contact-details">
 
 			   <div class="columns">
-
 				   <h3><i class="fa fa-home"></i>Indirizzo.</h3>
+           <a href="http://www.trentinoinnovation.eu/"><img width="100" src="images/sponsors/hit.jpg"/></a>
 				   <p><a href="http://www.trentinoinnovation.eu/">HIT - Hub Innovazione Trentino</a><br>
             Contamination Lab Trento<br>
 						Via San Croce, 67 <br>
 						38122, Trento , Italy
 					</p>
-
 			   </div>
 
 			   <div class="columns">
@@ -409,11 +408,9 @@ La mattina sarà riservata alle rapide presentazioni di vari temi Java&#8482;.
 			   </div>
 
 			   <div class="columns end">
-
 				   <h3><i class="fa fa-envelope"></i>Email.</h3>
 				   <p>jugtaas@googlegroups.com<br>
 				   </p>
-
 			   </div>
 
 		 	</div> <!-- end contact-details -->
