aggiornamento pagine  prossimo incontro e since 2005

--- a/incontri.html
+++ b/incontri.html
@@ -27,7 +27,7 @@
       <!-- Navigation bar -->
       <div class="masthead">
         <h4 class="text-masthead"><img src="img/jugtaas_logo.png" alt="Logo">
-          Java User Group Trentino-Alto Adige/Südtirol - since 2005</h4>
+          Java User Group Trentino-Alto Adige/Südtirol <em>- since 2005</em></h4>
         <ul class="nav nav-justified">
           <li><a href="index.html">Home</a></li>
           <li class="active"><a href="incontri.html">Incontri</a></li>
