--- a/index.html
+++ b/index.html
@@ -1,97 +1,84 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta http-equiv="content-type" content="text/html; charset=UTF-8">
-        <meta charset="utf-8">
-        <meta http-equiv="X-UA-Compatible" content="IE=edge">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta name="description" content="">
-        <meta name="author" content="">
-        <link rel="shortcut icon" href="img/favicon.png">
-
-        <title>JUG Trentino-Alto Adige/Südtirol - Home</title>
-
-        <!-- Bootstrap core CSS -->
-        <link href="css/bootstrap.css" rel="stylesheet">
-
-        <!-- Custom styles for this template -->
-        <link href="css/justified-nav.css" rel="stylesheet">
-        <link href='http://fonts.googleapis.com/css?family=Snippet' rel='stylesheet' type='text/css'>
-        <!--
-        <link href='http://fonts.googleapis.com/css?family=Jolly+Lodger' rel='stylesheet' type='text/css'>
-        -->
-
-        <!-- Just for debugging purposes. Don't actually copy this line! -->
-        <!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
-
-        <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-        <!--[if lt IE 9]>
-          <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-          <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
+  <head>
+    <meta content="text/html; charset=UTF-8" http-equiv="content-type">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
+    <link rel="shortcut icon" href="img/favicon.png">
+    <title>JUG Trentino-Alto Adige/Südtirol - Home</title>
+    <!-- Bootstrap core CSS -->
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="css/justified-nav.css" rel="stylesheet">
+    <link href="http://fonts.googleapis.com/css?family=Snippet" rel="stylesheet"
+      type="text/css">
+    <!--
+        <link href='http://fonts.googleapis.com/css?family=Jolly+Lodger' rel='stylesheet' type='text/css'>        -->
+    <!-- Just for debugging purposes. Don't actually copy this line! -->
+    <!--[if lt IE 9]><script src="../../docs-assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!--[if lt IE 9]>
+          <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>          <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
         <![endif]-->
-    </head>
-
-    <body>
-
-        <div class="container">
-
-            <div class="masthead">
-
-                <!-- Navigation bar -->
-                <h4 class="text-masthead"><img src="img/jugtaas_logo.png" alt="Logo" /> Java User Group Trentino-Alto Adige/Südtirol</h4>
-                <ul class="nav nav-justified">
-                    <li class="active"><a href="index.html">Home</a></li>
-                    <li ><a href="incontri.html">Incontri</a></li>
-                    <li><a href="mailinglist.html">Maling List</a></li>
-                    <li><a href="utenti.html">Utenti</a></li>
-                    <li><a href="manifesto.html">Manifesto</a></li>
-                    <li><a href="contatti.html">Contatti</a></li>
-                    <li><a href="sponsor.html">Sponsor</a></li>
-                    <!--
+  </head>
+  <body>
+    <div class="container">
+      <div class="masthead">
+        <!-- Navigation bar -->
+        <h4 class="text-masthead"><img src="img/jugtaas_logo.png" alt="Logo">
+          Java User Group Trentino-Alto Adige/Südtirol - <em>since 2005</em></h4>
+        <ul class="nav nav-justified">
+          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="incontri.html">Incontri</a></li>
+          <li><a href="mailinglist.html">Maling List</a></li>
+          <li><a href="utenti.html">Utenti</a></li>
+          <li><a href="manifesto.html">Manifesto</a></li>
+          <li><a href="contatti.html">Contatti</a></li>
+          <li><a href="sponsor.html">Sponsor</a></li>
+          <!--
                     -->
-                </ul>
-            </div>
-
-            <!-- Jumbotron -->
-            <div class="jumbotron">
-				<a href="incontri-prossimo.html" title="scopri il prossimo incontro">
-				<img src="img/jugtaas_logo_big.png"/>
-				</a>
-                <h2>Java User Group Trentino-Alto Adige/Südtirol</h2>
-
-            </div>
-
-            <!-- Example row of columns -->
-            <div class="row">
-                <div class="col-lg-4">
-                    <h2>Iscrizione</h2>
-                    <p>Il gruppo non ha una iscrizione formale ma lascia libera scelta di adesione alle singole attività svolte .</p>
-                    <p><a class="btn btn-primary" href="iscrizione.html" role="button">Dettagli »</a></p>
-                </div>
-                <div class="col-lg-4">
-                    <h2>Incontri</h2>
-                    <p>Il Java User Group si ritrova con frequenza quasi mensile per discutere ed approdonfire temi legati a Java. </p>
-                    <p><a class="btn btn-primary" href="incontri.html" role="button">Dettagli »</a></p>
-                </div>
-                <div class="col-lg-4">
-                    <h2>Mailing List</h2>
-                    <p>Per chi non può partecipare agli incontri il punto di contatto ufficiale del gruppo è la sua mailing list. </p>
-                    <p><a class="btn btn-primary" href="mailinglist.html" role="button">Dettagli »</a></p>
-                </div>
-            </div>
-
-
-            <!-- Site footer -->
-            <div class="footer">
-                <p>JUG Trentino-Alto Adige/Südtirol è un libero gruppo di utenti Java - Java™ è un marchio registrato da Oracle Corporation.</p>
-            </div>
-
-        </div> <!-- /container -->
-
-
-        <!-- Bootstrap core JavaScript
+        </ul>
+      </div>
+      <!-- Jumbotron -->
+      <div class="jumbotron"> <a href="incontri-prossimo.html" title="scopri il prossimo incontro">
+          <img src="img/jugtaas_logo_big.png"> </a>
+        <h2>Java User Group Trentino-Alto Adige/Südtirol</h2>
+      </div>
+      <!-- Example row of columns -->
+      <div class="row">
+        <div class="col-lg-4">
+          <h2>Iscrizione</h2>
+          <p>Il gruppo non ha una iscrizione formale ma lascia libera scelta di
+            adesione alle singole attività svolte .</p>
+          <p><a class="btn btn-primary" href="iscrizione.html" role="button">Dettagli
+              »</a></p>
+        </div>
+        <div class="col-lg-4">
+          <h2>Incontri</h2>
+          <p>Il Java User Group si ritrova con frequenza quasi mensile per
+            discutere ed approdonfire temi legati a Java. </p>
+          <p><a class="btn btn-primary" href="incontri.html" role="button">Dettagli
+              »</a></p>
+        </div>
+        <div class="col-lg-4">
+          <h2>Mailing List</h2>
+          <p>Per chi non può partecipare agli incontri il punto di contatto
+            ufficiale del gruppo è la sua mailing list. </p>
+          <p><a class="btn btn-primary" href="mailinglist.html" role="button">Dettagli
+              »</a></p>
+        </div>
+      </div>
+      <!-- Site footer -->
+      <div class="footer">
+        <p>JUG Trentino-Alto Adige/Südtirol è un libero gruppo di utenti Java -
+          Java™ è un marchio registrato da Oracle Corporation.</p>
+      </div>
+    </div>
+    <!-- /container -->
+    <!-- Bootstrap core JavaScript
         ================================================== -->
-        <!-- Placed at the end of the document so the pages load faster -->
-
-    </body>
+    <!-- Placed at the end of the document so the pages load faster -->
+  </body>
 </html>
