--- a/incontri-prossimo.html
+++ b/incontri-prossimo.html
@@ -66,7 +66,7 @@
       <!-- Site footer -->
       <div class="footer">
         <p>JUG Trentino-Alto Adige/Südtirol è un libero gruppo di utenti Java -
-          Java™ è un marchio registrato da Oracle Corporation.</p>
+          Java™ è un marchio registrato da Oracle Corporation.A</p>
       </div>
       <!-- Bootstrap core JavaScript
             ================================================== -->
