--- a/contatti.html
+++ b/contatti.html
@@ -48,7 +48,7 @@
         <div class="col-md-7">
           <h2 class="featurette-heading">Davide Montesin</h2>
           <span class="text-muted">coordinatore Alto Adige</span> </div>
-        <div class="col-md-5"> <img class="featurette-image img-responsive" src="img/users/user.gif"
+        <div class="col-md-5"> <img class="featurette-image img-responsive" src="img/users/user_dm.gif"
             alt="Generic placeholder image"> </div>
       </div>
       <div class="row featurette">
