updates with first information

--- a/jday/index.html
+++ b/jday/index.html
@@ -7,7 +7,7 @@
    <!--- Basic Page Needs
    ================================================== -->
    <meta charset="utf-8">
-	<title>JUG Day TAAS 2016- A Day In Java&#8482;</title>
+	<title>JUG Day TAAS 2017- A Day In Java&#8482;</title>
 	<meta name="description" content="">
 	<meta name="author" content="">
 
@@ -71,7 +71,7 @@
    	<div  id="main" class="row">
 
 	   	<div class="twelve columns">
-        <h1>14 maggio 2016</h1>
+        <h1>13 maggio 2017</h1>
 
 	   		<h1>Un giorno per incontrare la comunità  di Java&#8482; in Trentino!</h1>
 
@@ -131,18 +131,19 @@
       <div class="row section-content">
 
 			<div class="six columns">
-		      <h3>Mattina</h3>
+		      <h3>Talks</h3>
 
-		      <p>La mattina sarà dedicata a vari temi di carattere professionale che riguardano il mondo Java. Esperti Java parleranno delle proprie esperienze professionali in azienda.
-La mattina sarà riservata alle rapide presentazioni di vari temi Java&#8482;.
+		      <p>Nell'arco della giornata si susseguono incontri su vari temi di
+            carattere professionale che riguardano il mondo Java e JVM.
+            Esperti Java parleranno delle proprie esperienze professionali in azienda.
             <a href="#quicks">quicks</a>
 		      </p>
 	      </div>
 
 	      <div class="six columns">
-		      <h3>Pomeriggio</h3>
+		      <h3>HandsOn</h3>
 
-		      <p>Il pomeriggio il ruolo si rovescia e il pubblico diventa attore principale.
+		      <p>Il ruolo si rovescia e il pubblico diventa attore principale.
             Mani alla propria tastiera per scivere codice pulito
             ed ai propri fogli di carta o digitali per l'analisi di soluzioni eleganti.
             <a href="#sprint">sprint</a>
@@ -192,7 +193,7 @@ La mattina sarà riservata alle rapide presentazioni di vari temi Java&#8482;.
 
 	         <h1>Quicks.</h1>
 
-	         <p class="lead">Una mattina di presentazioni brevi da 20 minuti ciascuna su un tema specifico di Java&#8482;
+	         <p class="lead">Presentazioni brevi da 20 minuti ciascuna su un tema specifico di Java&#8482; o JVM
            che può riguardare prodotti, una metodologia, e strumenti per lo sviluppo.
 	         </p>
 
@@ -211,9 +212,9 @@ La mattina sarà riservata alle rapide presentazioni di vari temi Java&#8482;.
 	      </div>
 
 	      <div class="six columns">
-		      <h3>Mario Alexandro Santini</h3>
+		      <h3>Mario Fusco</h3>
 
-		      <p>Quante volte una semplice richiesta si risolve con un semplice script per poi trasfomrarsi in tutt'altro.</p>
+		      <p>Drools core developer di RedHat.</p>
 	      </div>
 
       </div> <!-- end section-content -->
@@ -223,14 +224,14 @@ La mattina sarà riservata alle rapide presentazioni di vari temi Java&#8482;.
 			<div class="six columns">
 		      <h3>Davide Montesin</h3>
 
-		      <p>Panoramica sulle API Android per i sensori: GPS, accelerometro, gravità, ecc...
+		      <p>...
 		      </p>
 	      </div>
 
 	      <div class="six columns">
-		      <h3>Mattia Gasperotti</h3>
+		      <h3>...</h3>
 
-		      <p>Deployment di programmi in cloud direttamente in infrastruttura Google.
+		      <p>...
 		      </p>
 	      </div>
 
@@ -239,21 +240,21 @@ La mattina sarà riservata alle rapide presentazioni di vari temi Java&#8482;.
       <div class="row section-content">
 
 			<div class="six columns">
-		      <h3>Paolo D'Incau</h3>
+		      <h3>...</h3>
 
-		      <p>Strumenti, metodologia e cultura aziendale. Apportare quotidianamente valore.
+		      <p>...
 		      </p>
 	      </div>
 
         <div class="six columns">
-		      <h3>Tiziano Lattisi</h3>
+		      <h3>...</h3>
 
 		      <p>Informatica e libera professione dagli anni novanta ad oggi: da opportunità a necessità.
 		      </p>
 	      </div>
 
-        <div class="six columns">
-		      <h3>Andrea Bertagnolli</h3>
+        <div classs="six columns">
+		      <h3>...</h3>
 
 		      <p>Unit test in java, ovvero: <br>come sopravvivere nella giungla del codice
 
