fixes very small things

--- a/jday/index.html
+++ b/jday/index.html
@@ -117,7 +117,7 @@
             	<i class="fa fa-group"></i>
          	</div>
 
-	         <h1>About.</h1>
+	         <h1>About</h1>
 
 	         <p class="lead">Una giornata per approfondire con professionisti Java&#8482;,
              il panorama di prodotti, strumenti e metodologie in uso oggi nelle realtà aziendali.<br>
@@ -191,7 +191,7 @@
             	<i class="fa fa-group"></i>
          	</div>
 
-	         <h1>Quicks.</h1>
+	         <h1>Talks</h1>
 
 	         <p class="lead">Presentazioni brevi da 20 minuti ciascuna su un tema specifico di Java&#8482; o JVM
            che può riguardare prodotti, una metodologia, e strumenti per lo sviluppo.
@@ -224,14 +224,16 @@
 			<div class="six columns">
 		      <h3>Davide Montesin</h3>
 
-		      <p>...
+		      <p>
+            ...
 		      </p>
 	      </div>
 
 	      <div class="six columns">
 		      <h3>...</h3>
 
-		      <p>...
+		      <p>
+            ...
 		      </p>
 	      </div>
 
@@ -242,7 +244,8 @@
 			<div class="six columns">
 		      <h3>...</h3>
 
-		      <p>...
+		      <p>
+            ...
 		      </p>
 	      </div>
 
@@ -256,8 +259,8 @@
         <div classs="six columns">
 		      <h3>...</h3>
 
-		      <p>Unit test in java, ovvero: <br>come sopravvivere nella giungla del codice
-
+		      <p>
+            ...
 		      </p>
 	      </div>
 
@@ -294,9 +297,9 @@
             	<i class="fa fa-group"></i>
          	</div>
 
-	         <h1>Sprint.</h1>
+	         <h1>Sprint Contest</h1>
 
-	         <p class="lead">Un pomeriggio di attività mirate al conseguimento di uno specifico obiettivo.
+	         <p class="lead">Qualche ora di programmazione mirate al conseguimento di uno specifico obiettivo.
              Spazio alla scrittura di codice di qualità. Codice pulito, compatto ed elegante.
            </p>
 
