--- a/jday/index.html
+++ b/jday/index.html
@@ -141,7 +141,7 @@
 	      </div>
 
 	      <div class="six columns">
-		      <h3>HandsOn</h3>
+		      <h3>Hands On</h3>
 
 		      <p>Il ruolo si rovescia e il pubblico diventa attore principale.
             Mani alla propria tastiera per scivere codice pulito
@@ -164,11 +164,11 @@
 			      <h2>Vieni ad incontrarci</h2>
 
             <div class="action">
-  			         <a href="https://www.eventbrite.com/e/jday-2016-quicks-tickets-23939041317" class="button">Registrazione alla mattina</a>
+  			         <a href="https://www.eventbrite.com/e/jday-2016-quicks-tickets-23939041317" class="button">Registrazione ai talk</a>
   	         	</div>
               <br>
             <div class="action">
-  			         <a href="https://www.eventbrite.com/e/jday-2016-sprint-contest-tickets-24118015634" class="button">Registrazione al pomeriggio</a>
+  			         <a href="https://www.eventbrite.com/e/jday-2016-sprint-contest-tickets-24118015634" class="button">Registrazione al contest</a>
   	         	</div>
 
 			   </div>
