--- a/jday/index.html
+++ b/jday/index.html
@@ -297,7 +297,7 @@ di java.util.concurrent.Flow
               </p>
           </div>
 
-        <div classs="six columns">
+          <div class="six columns">
               <h3>Alessandro Dalfovo</h3>
 
               <p>
@@ -320,7 +320,7 @@ di java.util.concurrent.Flow
               </p>
           </div>
 
-        <div classs="six columns">
+        <div class="six columns">
               <h3>...</h3>
 
               <p>
