removes into buttons leaking into about section

--- a/jday/index.html
+++ b/jday/index.html
@@ -87,23 +87,23 @@
                     <span>50 <em>minuti</em></span>
                      <span>33 <em>secondi</em></span>
                </div>
-
                <!-- Begin Signup -->
+               <!--
         <div class="action">
-            <a href="https://www.eventbrite.com/e/jday-2016-quicks-tickets-23939041317" class="button">Registrazione alle presentazioni <br>20 posti</a>
+            <a href="https://www.eventbrite.com/e/jday-2016-quicks-tickets-23939041317" class="button">presentazioni 20 posti</a>
             <a href="#quicks"> <img src="images/giu.png" alt="informazioni"></a>
 
-             <a href="https://www.eventbrite.com/e/jday-2016-sprint-contest-tickets-24118015634" class="button">Registrazione al contest <br>8 posti
+             <a href="https://www.eventbrite.com/e/jday-2016-sprint-contest-tickets-24118015634" class="button">contest 8 posti
              </a>
              <a href="#sprint">  <img src="images/giu.png" alt="informazioni"></a>
 
-              <a href="https://www.eventbrite.com/e/jday-2016-sprint-contest-tickets-24118015634" class="button">Registrazione al dojo <br>8 posti
+              <a href="https://www.eventbrite.com/e/jday-2016-sprint-contest-tickets-24118015634" class="button">dojo 8 posti
               </a>
               <a href="#dojo">  <img src="images/giu.png" alt="informazioni"></a>
            </div>
 
         </div>
-
+    -->
 
       </div> <!-- main end -->
 
